--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  table_calendar: ^3.1.2
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +63,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - strongsight/assets/images/logo.png
-    - strongsight/assets/images/google.png
-    - strongsight/assets/images/apple.png
+    - assets/images/
 
 
   # To add assets to your application, add an assets section, like this:
