--- a/FrontEnd/StrongSight/strongsight/pubspec.yaml
+++ b/FrontEnd/StrongSight/strongsight/pubspec.yaml
@@ -59,9 +59,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/logo.png
-    - assets/images/google.png
-    - assets/images/apple.png
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
