--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   table_calendar: ^3.1.2
   provider: ^6.1.2
   shared_preferences: ^2.3.2
-
-
+  camera: ^0.10.0+2
+  tflite_flutter: ^0.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +64,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/models/pose_landmarker_lite.tflite
 
 
   # To add assets to your application, add an assets section, like this:
