--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.3.2
   camera: ^0.10.0+2
   tflite_flutter: ^0.10.0
+  lottie: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,6 +66,7 @@ flutter:
   assets:
     - assets/images/
     - assets/models/pose_landmarker_lite.tflite
+    - assets/videos/SplashScreen.json
 
 
   # To add assets to your application, add an assets section, like this:
