--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   table_calendar: ^3.1.2
   provider: ^6.1.2
   shared_preferences: ^2.3.2
-  camera: ^0.10.0+2
-  tflite_flutter: ^0.10.0
+  camera: ^0.11.3  # Update to latest
+  google_mlkit_pose_detection: ^0.14.0  # Add this
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
