--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.3.2
   camera: ^0.11.3  # Update to latest
   google_mlkit_pose_detection: ^0.14.0  # Add this
+  lottie: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
