--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   camera: ^0.10.0+2
   tflite_flutter: ^0.10.0
   lottie: ^3.1.0
+  uuid: ^4.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
