--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -2,7 +2,7 @@ name: strongsight
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -37,7 +37,9 @@ dependencies:
   tflite_flutter: ^0.10.0
   lottie: ^3.1.0
   uuid: ^4.3.3
+  firebase_core: ^4.4.0 # Changed from ^3.8.1
   firebase_auth: ^6.1.3
+  http: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,7 +61,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -69,7 +70,6 @@ flutter:
     - assets/images/
     - assets/models/pose_landmarker_lite.tflite
     - assets/videos/SplashScreen.json
-
 
   # To add assets to your application, add an assets section, like this:
   # assets:
