--- a/FrontEnd/StrongSight/pubspec.yaml
+++ b/FrontEnd/StrongSight/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   camera: ^0.11.3  # Update to latest
+  audioplayers: ^6.5.1
   google_mlkit_pose_detection: ^0.14.0  # Add this
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.1.3
+  lottie: ^3.3.2
+  audio_session: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,8 @@ flutter:
     - assets/images/
     - assets/models/pose_landmarker_lite.tflite
     - assets/videos/SplashScreen.json
+    - assets/audio/good_rep.mp3
+    - assets/audio/bad_rep.mp3
 
 
   # To add assets to your application, add an assets section, like this:
